syntax = "proto3";

package client_datanode;

service ClientDataNode {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc StoreChunk(StoreChunkRequest) returns (StoreChunkResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
 string message = 1;
}

message StoreChunkRequest {
  string chunk_id = 1;
  repeated string replica_set = 2;
}
message StoreChunkResponse {
  string address =1;
}

