syntax = "proto3";

package namenode_datanode;

service NamenodeDatanode {
  rpc ReplicateChunk(ReplicateChunkRequest)returns (ReplicateChunkResponse);
  rpc DeleteChunk(DeleteChunkRequest)returns (DeleteChunkResponse);
}

message ReplicateChunkRequest {
  string targetDataNode = 1;
  string chunkId = 2;
  string ticket=3;
}
message ReplicateChunkResponse {
}

message DeleteChunkRequest {
  string id =1;
}
message DeleteChunkResponse {
  bool available = 1;
}
